# msged

./: .cvsignore  .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile  VERSION  addr.c  addr.h  ansi.c  areas.c  areas.h  bmg.c  bmg.h  charset.c  charset.h  config.c  config.h  control.c  critical.asm  critical.h  curses.c  cvsdate.h  date.c  date.h  dialogs.c  dialogs.h  dirute.c  dirute.h  dlgbox.c  dlist.c  dlist.h  dosasm.c  dosasm.h  dosmisc.c  dosmisc.h  echotoss.c  echotoss.h  editmail.h  environ.c  (+163 more)
contrib/: README  asc_iso5.chs  cp866_iso5.chs  ibm_iso5.chs  iso5_asc.chs  iso5_cp866.chs  iso5_ibm.chs  iso5_rufido.chs  kdeconsole  rufido_iso5.chs
debian/: README.Debian  changelog  control  copyright  doc-base  docs  examples  files  huskymak.cfg  postinst.debhelper  prerm.debhelper  rules  substvars
doc/: README  README.Mak  makefile.husky  msged.texi  msged.tpl  sample.cfg  sample.tpl  scheme.001  scheme.002  scheme.003  scheme.004  todo.txt  whatsnew.txt
doc/manual/: Makefile  makefile  makefile.husky  msged.texi
make/: makefile.inc  makefile.mgw  makefile.mvc
maps/: .cvsignore  1125_866.chs  1125_asc.chs  1125_ibm.chs  1125_is5.chs  1125_koi.chs  850_865.chs  850_asc.chs  850_ibm.chs  850_iso.chs  865_850.chs  865_866.chs  865_asc.chs  865_ibm.chs  865_iso.chs  866_1125.chs  866_865.chs  866_asc.chs  866_ibm.chs  866_is5.chs  866_koi.chs  Makefile  README  can_ibm.chs  dut_ibm.chs  fin_ibm.chs  frn_ibm.chs  grm_ibm.chs  ibm_850.chs  ibm_865.chs  ibm_asc.chs  ibm_iso.chs  ibm_mac.chs  ibm_swe.chs  ibm_vt1.chs  is5_1125.chs  is5_866.chs  is5_asc.chs  iso_850.chs  iso_865.chs  (+20 more)
